[kcm] Sort output's refresh rates descending

Either due to de-duplication or maybe it's just a normal backend data,
it was possible to get this list in random order, which was not
convenient for the end-user.

BUG: 439515